--- a/src/main/java/graphics/fxml/AdminManageCodesMenu.fxml
+++ b/src/main/java/graphics/fxml/AdminManageCodesMenu.fxml
@@ -15,7 +15,7 @@
         <URL value="@cssSheets/AddProduct.css" />
     </stylesheets>
     <children>
-        <Button layoutY="21.0" mnemonicParsing="false" onAction="#back" text="back" />
+        <Button layoutY="21.0" mnemonicParsing="false" onAction="#back" onMousePressed="#buttonSound" text="back" />
         <TableView fx:id="discountTable" layoutX="51.0" prefHeight="536.0" prefWidth="673.0">
             <columns>
                 <TableColumn fx:id="codeColumn" prefWidth="93.0" text="Discount Code" />
@@ -27,8 +27,8 @@
                 <TableColumn fx:id="viewMoreColumn" prefWidth="86.4000244140625" text="View more" />
             </columns>
         </TableView>
-        <Button layoutX="41.0" layoutY="546.0" mnemonicParsing="false" onAction="#addDiscount" prefHeight="46.0" prefWidth="184.0" text="Add Discount Code" />
-        <Button layoutX="476.0" layoutY="546.0" mnemonicParsing="false" onAction="#editDiscount" prefHeight="46.0" prefWidth="184.0" text="Edit Discount Code" />
-        <Button layoutX="253.0" layoutY="546.0" mnemonicParsing="false" onAction="#removeDiscount" prefHeight="46.0" prefWidth="184.0" text="Remove Discount Code" />
+        <Button layoutX="41.0" layoutY="546.0" mnemonicParsing="false" onAction="#addDiscount" onMousePressed="#buttonSound" prefHeight="46.0" prefWidth="184.0" text="Add Discount Code" />
+        <Button layoutX="476.0" layoutY="546.0" mnemonicParsing="false" onAction="#editDiscount" onMousePressed="#buttonSound" prefHeight="46.0" prefWidth="184.0" text="Edit Discount Code" />
+        <Button layoutX="253.0" layoutY="546.0" mnemonicParsing="false" onAction="#removeDiscount" onMousePressed="#buttonSound" prefHeight="46.0" prefWidth="184.0" text="Remove Discount Code" />
     </children>
 </AnchorPane>
