--- a/src/main/java/graphics/fxml/AllProductsMenu.fxml
+++ b/src/main/java/graphics/fxml/AllProductsMenu.fxml
@@ -13,8 +13,8 @@
       <URL value="@cssSheets/BackGround.css" />
    </stylesheets>
    <children>
-      <Button layoutX="24.0" layoutY="28.0" mnemonicParsing="false" onAction="#back" text="back" />
-      <Button layoutX="14.0" layoutY="214.0" mnemonicParsing="false" onAction="#performFilter" prefHeight="32.0" prefWidth="106.0" text="Filter" />
+      <Button layoutX="24.0" layoutY="28.0" mnemonicParsing="false" onAction="#back" onMousePressed="#buttonSound" text="back" />
+      <Button layoutX="14.0" layoutY="214.0" mnemonicParsing="false" onAction="#performFilter" onMousePressed="#buttonSound" prefHeight="32.0" prefWidth="106.0" text="Filter" />
       <Label alignment="CENTER" contentDisplay="CENTER" layoutX="6.0" layoutY="79.0" prefHeight="22.0" prefWidth="89.0" text="Max Price">
          <font>
             <Font name="System Bold" size="13.0" />
@@ -24,12 +24,12 @@
       <Label alignment="CENTER" layoutX="13.0" layoutY="127.0" prefHeight="32.0" prefWidth="89.0" text="Product Name" />
       <TextField fx:id="nameTextField" layoutX="109.0" layoutY="124.0" prefHeight="38.0" prefWidth="106.0" />
       <Label alignment="CENTER" layoutX="13.0" layoutY="168.0" prefHeight="32.0" prefWidth="76.0" text="Category" />
-      <ChoiceBox fx:id="categoryChoiceBox" layoutX="99.0" layoutY="168.0" prefHeight="32.0" prefWidth="135.0" />
-      <CheckBox fx:id="priceCheckBox" layoutX="4.0" layoutY="279.0" mnemonicParsing="false" text="Sort By Price" />
-      <Button layoutX="138.0" layoutY="214.0" mnemonicParsing="false" onAction="#disableFilter" prefHeight="32.0" prefWidth="106.0" text="Disable Filter" />
-      <CheckBox fx:id="averageRateCheckBox" layoutX="127.0" layoutY="279.0" mnemonicParsing="false" text="Sort By Average Rate" />
-      <Button layoutX="14.0" layoutY="321.0" mnemonicParsing="false" onAction="#performSort" prefHeight="32.0" prefWidth="106.0" text="Sort" />
-      <Button layoutX="138.0" layoutY="321.0" mnemonicParsing="false" onAction="#disableSort" prefHeight="32.0" prefWidth="106.0" text="Disable Sort" />
+      <ChoiceBox fx:id="categoryChoiceBox" layoutX="99.0" layoutY="168.0" onMousePressed="#buttonSound" prefHeight="32.0" prefWidth="135.0" />
+      <CheckBox fx:id="priceCheckBox" layoutX="4.0" layoutY="279.0" mnemonicParsing="false" onMousePressed="#buttonSound" text="Sort By Price" />
+      <Button layoutX="138.0" layoutY="214.0" mnemonicParsing="false" onAction="#disableFilter" onMousePressed="#buttonSound" prefHeight="32.0" prefWidth="106.0" text="Disable Filter" />
+      <CheckBox fx:id="averageRateCheckBox" layoutX="127.0" layoutY="279.0" mnemonicParsing="false" onMousePressed="#buttonSound" text="Sort By Average Rate" />
+      <Button layoutX="14.0" layoutY="321.0" mnemonicParsing="false" onAction="#performSort" onMousePressed="#buttonSound" prefHeight="32.0" prefWidth="106.0" text="Sort" />
+      <Button layoutX="138.0" layoutY="321.0" mnemonicParsing="false" onAction="#disableSort" onMousePressed="#buttonSound" prefHeight="32.0" prefWidth="106.0" text="Disable Sort" />
       <TableView fx:id="productTable" layoutX="304.0" prefHeight="600.0" prefWidth="494.0">
          <columns>
             <TableColumn fx:id="nameColumn" prefWidth="75.0" text="ProductId" />
@@ -41,7 +41,7 @@
             <TableColumn fx:id="buttonColumn" prefWidth="72.0" text="View More" />
          </columns>
       </TableView>
-      <Button layoutX="138.0" layoutY="25.0" mnemonicParsing="false" onAction="#viewCart" prefHeight="38.0" prefWidth="83.0" text="View Cart" />
-      <Button layoutX="14.0" layoutY="547.0" mnemonicParsing="false" onAction="#goToMyAccount" prefHeight="38.0" prefWidth="106.0" text="My Account" />
+      <Button layoutX="138.0" layoutY="25.0" mnemonicParsing="false" onAction="#viewCart" onMousePressed="#buttonSound" prefHeight="38.0" prefWidth="83.0" text="View Cart" />
+      <Button layoutX="14.0" layoutY="547.0" mnemonicParsing="false" onAction="#goToMyAccount" onMousePressed="#buttonSound" prefHeight="38.0" prefWidth="106.0" text="My Account" />
    </children>
 </AnchorPane>
