--- a/src/main/java/graphics/fxml/CartMenu.fxml
+++ b/src/main/java/graphics/fxml/CartMenu.fxml
@@ -16,19 +16,19 @@
         <URL value="@cssSheets/CartMenu.css" />
     </stylesheets>
     <bottom>
-        <Button mnemonicParsing="false" onAction="#back" text="Back" BorderPane.alignment="CENTER" />
+        <Button mnemonicParsing="false" onAction="#back" onMousePressed="#buttonSound" text="Back" BorderPane.alignment="CENTER" />
     </bottom>
     <center>
         <SplitPane dividerPositions="0.29797979797979796" prefHeight="160.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <items>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="371.0" prefWidth="165.0">
                     <children>
-                        <Button layoutX="4.0" layoutY="123.0" mnemonicParsing="false" onAction="#increaseProduct" prefHeight="35.0" prefWidth="75.0" text="+" />
-                        <Button layoutX="8.0" layoutY="453.0" mnemonicParsing="false" onAction="#purchase" prefHeight="48.0" prefWidth="159.0" text="Purchase" />
-                        <Button layoutX="87.0" layoutY="123.0" mnemonicParsing="false" onAction="#decreaseProduct" prefHeight="35.0" prefWidth="75.0" text="-" />
+                        <Button layoutX="4.0" layoutY="123.0" mnemonicParsing="false" onAction="#increaseProduct" onMousePressed="#buttonSound" prefHeight="35.0" prefWidth="75.0" text="+" />
+                        <Button layoutX="8.0" layoutY="453.0" mnemonicParsing="false" onAction="#purchase" onMousePressed="#buttonSound" prefHeight="48.0" prefWidth="159.0" text="Purchase" />
+                        <Button layoutX="87.0" layoutY="123.0" mnemonicParsing="false" onAction="#decreaseProduct" onMousePressed="#buttonSound" prefHeight="35.0" prefWidth="75.0" text="-" />
                         <TextField fx:id="productTextField" layoutX="4.0" layoutY="48.0" prefHeight="42.0" prefWidth="167.0" />
                         <Label layoutX="8.0" layoutY="14.0" prefHeight="24.0" prefWidth="125.0" text="Product Id" />
-                  <Button layoutX="10.0" layoutY="514.0" mnemonicParsing="false" onAction="#goToMyAccount" prefHeight="44.0" prefWidth="156.0" text="My Account" />
+                  <Button layoutX="10.0" layoutY="514.0" mnemonicParsing="false" onAction="#goToMyAccount" onMousePressed="#buttonSound" prefHeight="44.0" prefWidth="156.0" text="My Account" />
                     </children>
                 </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="376.0" prefWidth="416.0">
