--- a/src/main/java/graphics/fxml/CompareMenu.fxml
+++ b/src/main/java/graphics/fxml/CompareMenu.fxml
@@ -25,6 +25,6 @@
         </TableView>
     </center>
     <bottom>
-        <Button alignment="CENTER" mnemonicParsing="false" onAction="#back" prefHeight="27.0" prefWidth="65.0" text="Back" BorderPane.alignment="CENTER" />
+        <Button alignment="CENTER" mnemonicParsing="false" onAction="#back" onMousePressed="#buttonSound" prefHeight="27.0" prefWidth="65.0" text="Back" BorderPane.alignment="CENTER" />
     </bottom>
 </BorderPane>
