--- a/src/main/java/graphics/fxml/CustomerMenu.fxml
+++ b/src/main/java/graphics/fxml/CustomerMenu.fxml
@@ -1,20 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.URL?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.Separator?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import java.net.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="428.0" prefWidth="600.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="graphics.CustomerMenu">
+<AnchorPane prefHeight="428.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.CustomerMenu">
     <stylesheets>
         <URL value="@cssSheets/BasicStyle.css" />
     </stylesheets>
@@ -24,7 +16,7 @@
     <children>
         <VBox layoutX="16.0" layoutY="101.0" prefHeight="280.0" prefWidth="154.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
             <children>
-                <MenuButton alignment="CENTER" mnemonicParsing="false" prefHeight="54.0" prefWidth="160.0" text="Edit Personal Info" textAlignment="CENTER">
+                <MenuButton alignment="CENTER" mnemonicParsing="false" onMousePressed="#buttonSound" prefHeight="54.0" prefWidth="160.0" text="Edit Personal Info" textAlignment="CENTER">
                     <items>
                         <MenuItem mnemonicParsing="false" onAction="#editPasswordField" text="Password" />
                         <MenuItem mnemonicParsing="false" onAction="#editNameField" text="Name" />
@@ -34,12 +26,12 @@
                         <MenuItem mnemonicParsing="false" onAction="#editNumberField" text="Number" />
                     </items>
                 </MenuButton>
-                <Button mnemonicParsing="false" onAction="#goToCartMenu" prefHeight="53.0" prefWidth="154.0" text="View Cart" />
-                <Button fx:id="goToBuyLogPage" mnemonicParsing="false" onAction="#goToBuyLogPage" prefHeight="54.0" prefWidth="154.0" text="My Buy History" />
-                <Button mnemonicParsing="false" onAction="#viewDiscounts" prefHeight="53.0" prefWidth="154.0" text="My Discount Codes" />
-                <Button mnemonicParsing="false" onAction="#goToMainMenu" prefHeight="54.0" prefWidth="154.0" text="Go To Main Menu" />
-                <Button mnemonicParsing="false" onAction="#customerRequestMenu" prefHeight="54.0" prefWidth="154.0" text=" Request Menu" />
-                <Button layoutX="10.0" layoutY="243.0" mnemonicParsing="false" onAction="#logout" prefHeight="54.0" prefWidth="154.0" text="logout" />
+                <Button mnemonicParsing="false" onAction="#goToCartMenu" onMousePressed="#buttonSound" prefHeight="53.0" prefWidth="154.0" text="View Cart" />
+                <Button fx:id="goToBuyLogPage" mnemonicParsing="false" onAction="#goToBuyLogPage" onMousePressed="#buttonSound" prefHeight="54.0" prefWidth="154.0" text="My Buy History" />
+                <Button mnemonicParsing="false" onAction="#viewDiscounts" onMousePressed="#buttonSound" prefHeight="53.0" prefWidth="154.0" text="My Discount Codes" />
+                <Button mnemonicParsing="false" onAction="#goToMainMenu" onMousePressed="#buttonSound" prefHeight="54.0" prefWidth="154.0" text="Go To Main Menu" />
+                <Button mnemonicParsing="false" onAction="#customerRequestMenu" onMousePressed="#buttonSound" prefHeight="54.0" prefWidth="154.0" text=" Request Menu" />
+                <Button layoutX="10.0" layoutY="243.0" mnemonicParsing="false" onAction="#logout" onMouseReleased="#buttonSound" prefHeight="54.0" prefWidth="154.0" text="logout" />
             </children>
         </VBox>
         <Label alignment="CENTER" contentDisplay="CENTER" ellipsisString="" layoutX="161.0" layoutY="29.0" prefHeight="48.0" prefWidth="278.0" text="WELCOME CUSTOMER!" textAlignment="CENTER">
@@ -107,7 +99,7 @@
             </font>
         </Label>
         <Separator layoutX="23.0" layoutY="91.0" prefHeight="18.0" prefWidth="146.0" />
-        <Button layoutX="2.0" layoutY="-1.0" mnemonicParsing="false" onAction="#back" prefHeight="35.0" prefWidth="66.0" text="back" />
+        <Button layoutX="2.0" layoutY="-1.0" mnemonicParsing="false" onAction="#back" onMousePressed="#buttonSound" prefHeight="35.0" prefWidth="66.0" text="back" />
     </children>
 
 </AnchorPane>
