--- a/src/main/java/graphics/fxml/CustomerRequestsMenu.fxml
+++ b/src/main/java/graphics/fxml/CustomerRequestsMenu.fxml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.URL?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import java.net.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"  fx:controller="graphics.CustomerRequestsMenu">
+<AnchorPane prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.CustomerRequestsMenu">
     <stylesheets>
         <URL value="@cssSheets/BasicStyle.css" />
     </stylesheets>
@@ -17,7 +15,7 @@
         <URL value="@cssSheets/AddProduct.css" />
     </stylesheets>
     <children>
-        <Button layoutX="14.0" layoutY="20.0" mnemonicParsing="false" onAction="#back" text="Back To Account" />
+        <Button layoutX="14.0" layoutY="20.0" mnemonicParsing="false" onAction="#back" onMousePressed="#buttonSound" text="Back To Account" />
         <TableView fx:id="requestsTable" layoutX="254.0" prefHeight="600.0" prefWidth="348.0">
             <columns>
                 <TableColumn fx:id="idColumn" prefWidth="56.59998321533203" text="ID" />
@@ -25,6 +23,6 @@
                 <TableColumn fx:id="statusColumn" prefWidth="138.0" text="Status" />
             </columns>
         </TableView>
-        <Button layoutX="25.0" layoutY="272.0" mnemonicParsing="false" onAction="#addComment" prefHeight="56.0" prefWidth="184.0" text="Request Add Comment" />
+        <Button layoutX="25.0" layoutY="272.0" mnemonicParsing="false" onAction="#addComment" onMousePressed="#buttonSound" prefHeight="56.0" prefWidth="184.0" text="Request Add Comment" />
     </children>
 </AnchorPane>
