--- a/src/main/java/graphics/fxml/LoginMenu.fxml
+++ b/src/main/java/graphics/fxml/LoginMenu.fxml
@@ -1,18 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Hyperlink?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.Font?>
+<?import java.net.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<?import java.net.URL?>
-<?import javafx.scene.control.PasswordField?>
-<AnchorPane fx:id="back" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.LoginMenu">
+<AnchorPane fx:id="back" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.LoginMenu">
     <stylesheets>
         <URL value="@cssSheets/BasicStyle.css" />
     </stylesheets>
@@ -44,7 +37,7 @@
                </font>
             </Label>
             <TextField fx:id="username" layoutX="172.0" layoutY="74.0" GridPane.columnIndex="1" />
-            <Button mnemonicParsing="false" onAction="#login" text="LOGIN" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Button mnemonicParsing="false" onAction="#login" onMousePressed="#buttonSound" text="LOGIN" GridPane.columnIndex="1" GridPane.rowIndex="2" />
          </children>
       </GridPane>
       <Label layoutX="261.0" layoutY="77.0" text="LOGIN">
@@ -57,8 +50,8 @@
             <Font size="13.0" />
          </font>
       </Label>
-      <Hyperlink layoutX="340.0" layoutY="321.0" onAction="#goToRegisterMenu" text="SIGN UP" />
-      <Button layoutX="14.0" layoutY="21.0" mnemonicParsing="false" onAction="#back" text="back" />
+      <Hyperlink layoutX="340.0" layoutY="321.0" onAction="#goToRegisterMenu" onMousePressed="#buttonSound" text="SIGN UP" />
+      <Button layoutX="14.0" layoutY="21.0" mnemonicParsing="false" onAction="#back" onMousePressed="#buttonSound" text="back" />
       <Label fx:id="message" layoutX="243.0" layoutY="369.0" prefHeight="17.0" prefWidth="195.0" />
    </children>
 </AnchorPane>
