--- a/src/main/java/graphics/fxml/PerBuyLog.fxml
+++ b/src/main/java/graphics/fxml/PerBuyLog.fxml
@@ -33,9 +33,9 @@
         <Label fx:id="amountOfDiscount" alignment="CENTER" layoutX="152.0" layoutY="480.0" prefHeight="43.0" prefWidth="100.0" />
         <Label layoutX="8.0" layoutY="542.0" prefHeight="35.0" prefWidth="80.0" text="Discount :" />
         <Label fx:id="discountUsed" alignment="CENTER" layoutX="142.0" layoutY="520.0" prefHeight="43.0" prefWidth="127.0" />
-        <Button layoutX="506.0" layoutY="556.0" mnemonicParsing="false" onAction="#back" prefHeight="35.0" prefWidth="80.0" text="Back" />
+        <Button layoutX="506.0" layoutY="556.0" mnemonicParsing="false" onAction="#back" onMousePressed="#buttonSound" prefHeight="35.0" prefWidth="80.0" text="Back" />
         <Label layoutX="329.0" layoutY="440.0" prefHeight="35.0" prefWidth="60.0" text="Date :" />
-        <Label fx:id="date" alignment="CENTER" layoutX="394.0" layoutY="432.0" prefHeight="51.0" prefWidth="153.0" />
+        <Label fx:id="date" alignment="CENTER" layoutX="394.0" layoutY="432.0" prefHeight="51.0" prefWidth="205.0" />
         <Label alignment="CENTER_RIGHT" layoutX="282.0" layoutY="22.0" prefHeight="26.0" prefWidth="80.0" text="( Log Code :" />
         <Label fx:id="logCode" alignment="CENTER_RIGHT" layoutX="370.0" layoutY="22.0" prefHeight="26.0" prefWidth="47.0" />
         <Label alignment="CENTER_RIGHT" layoutX="300.0" layoutY="22.0" prefHeight="26.0" prefWidth="133.0" text=")" />
