--- a/src/main/java/graphics/fxml/PerSellLog.fxml
+++ b/src/main/java/graphics/fxml/PerSellLog.fxml
@@ -31,11 +31,11 @@
         <Label fx:id="receivedMoney" alignment="CENTER" layoutX="169.0" layoutY="426.0" prefHeight="43.0" prefWidth="100.0" />
         <Label layoutX="7.0" layoutY="476.0" prefHeight="51.0" prefWidth="162.0" text="Amount Of Sale :" />
         <Label fx:id="amountOfSale" alignment="CENTER" layoutX="169.0" layoutY="480.0" prefHeight="43.0" prefWidth="100.0" />
-        <Button layoutX="506.0" layoutY="556.0" mnemonicParsing="false" onAction="#back" prefHeight="35.0" prefWidth="80.0" text="Back" />
+        <Button layoutX="506.0" layoutY="556.0" mnemonicParsing="false" onAction="#back" onMousePressed="#buttonSound" prefHeight="35.0" prefWidth="80.0" text="Back" />
         <Label layoutX="329.0" layoutY="440.0" prefHeight="35.0" prefWidth="60.0" text="Date :" />
-        <Label fx:id="date" alignment="CENTER" layoutX="394.0" layoutY="432.0" prefHeight="51.0" prefWidth="153.0" />
+        <Label fx:id="date" alignment="CENTER" layoutX="394.0" layoutY="432.0" prefHeight="51.0" prefWidth="201.0" />
         <Label alignment="CENTER_RIGHT" layoutX="282.0" layoutY="22.0" prefHeight="26.0" prefWidth="80.0" text="( Log Code :" />
-        <Label fx:id="logCode" alignment="CENTER_RIGHT" layoutX="364.0" layoutY="22.0" prefHeight="26.0" prefWidth="48.0" />
+        <Label fx:id="logCode" alignment="CENTER" layoutX="364.0" layoutY="22.0" prefHeight="26.0" prefWidth="42.0" />
         <Label alignment="CENTER_RIGHT" layoutX="300.0" layoutY="22.0" prefHeight="26.0" prefWidth="114.0" text=")" />
     </children>
 </AnchorPane>
