--- a/src/main/java/graphics/fxml/SellerProductMenu.fxml
+++ b/src/main/java/graphics/fxml/SellerProductMenu.fxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<?import java.net.URL?>
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.SellerProductMenu">
     <stylesheets>
         <URL value="@cssSheets/BasicStyle.css" />
@@ -26,13 +26,11 @@
             <TableColumn fx:id="buttonColumn" prefWidth="47.200000000000045" text="Edit" />
         </columns>
       </TableView>
-      <Button layoutX="7.0" layoutY="8.0" mnemonicParsing="false" onAction="#back" text="back" />
+      <Button layoutX="7.0" layoutY="8.0" mnemonicParsing="false" onAction="#back" onMousePressed="#buttonSound" text="back" />
       <Label alignment="CENTER" layoutX="208.0" layoutY="5.0" prefHeight="32.0" prefWidth="132.0" text="My Products">
          <font>
             <Font size="22.0" />
          </font>
       </Label>
-      <Button layoutX="140.0" layoutY="359.0" mnemonicParsing="false" onAction="#addProduct" prefHeight="26.0" prefWidth="106.0" text="Add Product" />
-      <Button layoutX="352.0" layoutY="359.0" mnemonicParsing="false" onAction="#removeProduct" prefHeight="26.0" prefWidth="106.0" text="Remove Product" />
    </children>
 </AnchorPane>
