--- a/src/main/java/graphics/fxml/SellerRequestMenu.fxml
+++ b/src/main/java/graphics/fxml/SellerRequestMenu.fxml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.URL?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import java.net.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"  fx:controller="graphics.SellerRequestMenu">
+<AnchorPane prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.SellerRequestMenu">
     <stylesheets>
         <URL value="@cssSheets/BasicStyle.css" />
     </stylesheets>
@@ -17,7 +15,7 @@
         <URL value="@cssSheets/AddProduct.css" />
     </stylesheets>
     <children>
-        <Button layoutX="14.0" layoutY="20.0" mnemonicParsing="false" onAction="#back" text="Back To Account" />
+        <Button layoutX="14.0" layoutY="20.0" mnemonicParsing="false" onAction="#back" onMousePressed="#buttonSound" text="Back To Account" />
         <TableView fx:id="requestsTable" layoutX="254.0" prefHeight="600.0" prefWidth="348.0">
             <columns>
                 <TableColumn fx:id="idColumn" prefWidth="56.59998321533203" text="ID" />
@@ -25,10 +23,10 @@
                 <TableColumn fx:id="statusColumn" prefWidth="138.0" text="Status" />
             </columns>
         </TableView>
-        <Button onAction="#editProduct" layoutX="14.0" layoutY="135.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="184.0" text="Request Edit Product" />
-        <Button onAction="#addProduct" layoutX="14.0" layoutY="207.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="184.0" text="Request Add Product" />
-        <Button onAction="#removeProduct" layoutX="14.0" layoutY="279.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="184.0" text="Request Remove Product" />
-        <Button onAction="#addOff" layoutX="14.0" layoutY="360.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="184.0" text="Request Add Off" />
-        <Button onAction="#editOff" layoutX="14.0" layoutY="441.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="184.0" text="Request Edit Off" />
+        <Button layoutX="14.0" layoutY="135.0" mnemonicParsing="false" onAction="#editProduct" onMousePressed="#buttonSound" prefHeight="56.0" prefWidth="184.0" text="Request Edit Product" />
+        <Button layoutX="14.0" layoutY="207.0" mnemonicParsing="false" onAction="#addProduct" onMousePressed="#buttonSound" prefHeight="56.0" prefWidth="184.0" text="Request Add Product" />
+        <Button layoutX="14.0" layoutY="279.0" mnemonicParsing="false" onAction="#removeProduct" onMousePressed="#buttonSound" prefHeight="56.0" prefWidth="184.0" text="Request Remove Product" />
+        <Button layoutX="14.0" layoutY="360.0" mnemonicParsing="false" onAction="#addOff" onMousePressed="#buttonSound" prefHeight="56.0" prefWidth="184.0" text="Request Add Off" />
+        <Button layoutX="14.0" layoutY="441.0" mnemonicParsing="false" onAction="#editOff" onMousePressed="#buttonSound" prefHeight="56.0" prefWidth="184.0" text="Request Edit Off" />
     </children>
 </AnchorPane>
