--- a/src/main/java/graphics/fxml/ShowImages.fxml
+++ b/src/main/java/graphics/fxml/ShowImages.fxml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import java.net.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
-            prefWidth="600.0"  xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="graphics.ShowImages">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.ShowImages">
+    <stylesheets>
+        <URL value="@cssSheets/BasicStyle.css" />
+    </stylesheets>
+    <stylesheets>
+        <URL value="@cssSheets/BackGround.css" />
+    </stylesheets>
     <children>
         <GridPane layoutX="-1.0" prefHeight="400.0" prefWidth="600.0">
             <columnConstraints>
@@ -38,7 +39,7 @@
                 <Label alignment="CENTER" prefHeight="17.0" prefWidth="145.0" text="8" GridPane.columnIndex="2" GridPane.rowIndex="4" />
                 <Label alignment="CENTER" prefHeight="17.0" prefWidth="140.0" text="9" GridPane.columnIndex="3" GridPane.rowIndex="4" />
                 <Label alignment="CENTER" prefHeight="17.0" prefWidth="140.0" text="10" GridPane.columnIndex="4" GridPane.rowIndex="4" />
-                <Button mnemonicParsing="false" onAction="#back" prefHeight="27.0" prefWidth="80.0" text="Back" />
+                <Button mnemonicParsing="false" onAction="#back" onMousePressed="#buttonSound" prefHeight="27.0" prefWidth="84.0" text="Back" />
                 <ImageView fx:id="image1" fitHeight="82.0" fitWidth="122.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="1" />
                 <ImageView fx:id="image6" fitHeight="80.0" fitWidth="121.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="3" />
                 <ImageView fx:id="image2" fitHeight="84.0" fitWidth="123.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
