--- a/src/main/java/graphics/fxml/ThisPersonBuyLogs.fxml
+++ b/src/main/java/graphics/fxml/ThisPersonBuyLogs.fxml
@@ -13,7 +13,7 @@
         <URL value="@cssSheets/BackGround.css" />
     </stylesheets>
     <bottom>
-        <Button mnemonicParsing="false" onAction="#back" prefHeight="26.0" prefWidth="56.0" text="Back" BorderPane.alignment="CENTER" />
+        <Button mnemonicParsing="false" onAction="#back" onMousePressed="#buttonSound" prefHeight="26.0" prefWidth="56.0" text="Back" BorderPane.alignment="CENTER" />
     </bottom>
    <center>
       <SplitPane dividerPositions="0.7686932215234102" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
@@ -42,7 +42,7 @@
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Button layoutX="265.0" layoutY="90.0" mnemonicParsing="false" onAction="#showBuyLog" text="Show Log" />
+                  <Button layoutX="257.0" layoutY="88.0" mnemonicParsing="false" onAction="#showBuyLog" onMousePressed="#buttonSound" text="Show Log" />
                </children></AnchorPane>
         </items>
       </SplitPane>
