--- a/src/main/java/graphics/fxml/AdminMenu.fxml
+++ b/src/main/java/graphics/fxml/AdminMenu.fxml
@@ -16,7 +16,7 @@
     <children>
         <VBox layoutX="10.0" layoutY="113.0" prefHeight="246.0" prefWidth="171.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
             <children>
-                <MenuButton mnemonicParsing="false" onMousePressed="#buttonSound" prefHeight="34.0" prefWidth="173.0" text="Edit Personal Info">
+                <MenuButton mnemonicParsing="false" prefHeight="34.0" prefWidth="173.0" text="Edit Personal Info">
                     <items>
                         <MenuItem mnemonicParsing="false" onAction="#editPasswordField" text="Password" />
                         <MenuItem mnemonicParsing="false" onAction="#editNameField" text="Name" />
