--- a/src/main/java/graphics/fxml/SellerMenu.fxml
+++ b/src/main/java/graphics/fxml/SellerMenu.fxml
@@ -15,7 +15,7 @@
     <children>
         <VBox layoutX="18.0" layoutY="109.0" prefHeight="287.0" prefWidth="158.0">
             <children>
-                <MenuButton alignment="CENTER" mnemonicParsing="false" onMousePressed="#buttonSound" prefHeight="36.0" prefWidth="162.0" text="Edit Personal Info">
+                <MenuButton alignment="CENTER" mnemonicParsing="false" prefHeight="36.0" prefWidth="162.0" text="Edit Personal Info">
                     <items>
                         <MenuItem mnemonicParsing="false" onAction="#editPasswordField" text="Password" />
                         <MenuItem mnemonicParsing="false" onAction="#editNameField" text="Name" />
