--- a/src/main/java/graphics/fxml/PerSellLog.fxml
+++ b/src/main/java/graphics/fxml/PerSellLog.fxml
@@ -24,7 +24,7 @@
         </TableView>
         <Label layoutX="21.0" layoutY="21.0" prefHeight="23.0" prefWidth="237.0" text="Here's Your Log :">
             <font>
-                <Font name="Bookshelf Symbol 7" size="18.0" />
+                <Font name="Book Antiqua" size="18.0" />
             </font>
         </Label>
         <Label layoutX="14.0" layoutY="426.0" prefHeight="35.0" prefWidth="154.0" text="Total Reiceved Money :" />
@@ -36,6 +36,9 @@
         <Label fx:id="date" alignment="CENTER" layoutX="394.0" layoutY="432.0" prefHeight="51.0" prefWidth="201.0" />
         <Label alignment="CENTER_RIGHT" layoutX="282.0" layoutY="22.0" prefHeight="26.0" prefWidth="80.0" text="( Log Code :" />
         <Label fx:id="logCode" alignment="CENTER" layoutX="364.0" layoutY="22.0" prefHeight="26.0" prefWidth="42.0" />
-        <Label alignment="CENTER_RIGHT" layoutX="300.0" layoutY="22.0" prefHeight="26.0" prefWidth="114.0" text=")" />
+        <Label alignment="CENTER_RIGHT" layoutX="300.0" layoutY="22.0" prefHeight="26.0" prefWidth="114.0" text=")">
+         <font>
+            <Font name="Book Antiqua" size="12.0" />
+         </font></Label>
     </children>
 </AnchorPane>
